--- a/app/src/main/res/layout/activity_speech_to_test.xml
+++ b/app/src/main/res/layout/activity_speech_to_test.xml
@@ -10,6 +10,11 @@
     tools:ignore="HardcodedText"
     tools:context=".SpeechToTestActivity">
 
+    <TextView
+        android:id="@+id/tvLanguage"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tvStatus"
