--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,6 +14,7 @@
         android:id="@+id/etKey"
         android:hint="Enter subscription Key here"
         android:padding="15dp"
+        android:text="@string/key"
         android:autofillHints="no"
         android:inputType="text"
         android:layout_width="match_parent"
